platform/overlays/istio/helloworld-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-world-virtual-service
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/publicgateway
  http:
  - name: gateway-to-helloworld
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: helloworld.default.svc.cluster.local
